Solved applying proper css class/color to squares that are clicked on by changing Square.js to a class component and managing 'alive' state locally

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
 @import './styles/Global.scss';
 @import './styles/Reset.scss';
 @import './styles/Square.scss';
+@import './styles/GameBoard.scss';
+@import './styles/Controls.scss';
+@import './styles/App.scss';
