--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,5 @@
-.App {
-  text-align: center; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+body {
+  background-color: white; }
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -71,10 +49,50 @@ table {
   border-spacing: 0; }
 
 .Square {
-  background-color: #D3D3D3;
-  height: 25px;
-  width: 25px;
-  border: 2px solid black;
-  overflow: none; }
+  background-color: #013243;
+  height: 12px;
+  width: 12px;
+  border: 0.1px solid rgba(236, 236, 236, 0.5);
+  overflow: none;
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto; }
   .Square:hover {
-    background-color: green; }
+    background-color: #48dbfb; }
+
+.active {
+  background-color: #48dbfb; }
+
+.game-board {
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto; }
+
+.controls {
+  margin-top: 3em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3em;
+  height: 15em;
+  width: 25em;
+  background-color: #013243;
+  color: snow; }
+  .controls h2 {
+    text-align: center;
+    padding: 1em;
+    font-weight: bolder;
+    text-transform: uppercase; }
+  .controls h3 {
+    padding: 1em;
+    font-weight: bolder;
+    text-transform: uppercase; }
+  .controls button {
+    border: 1px solid snow;
+    margin-left: .5em;
+    margin-right: .5em;
+    height: 2em;
+    width: 6em;
+    text-transform: uppercase; }
+
+.container h1 {
+  text-align: center; }
