--- a/src/styles/_Square.scss
+++ b/src/styles/_Square.scss
@@ -1,12 +1,19 @@
 
 .Square {
-  background-color: #D3D3D3;
-  height: 25px;
-  width: 25px;
-  border: 2px solid black;
+  background-color: #013243; //#24252a;
+  height: 12px;
+  width: 12px;
+  border: .1px solid rgba(236, 236, 236, .5);
   overflow: none;
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
 
   &:hover {
-    background-color: green;
+    background-color: #48dbfb; //#00e640; //#2ecc71; //#39FF14;
   }
+}
+
+.active {
+  background-color:  #48dbfb;
 }
