--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Mukta+Malar:700|Roboto");
 body {
-  background-color: white; }
+  background-color: white;
+  font-family: 'Roboto', sans-serif;
+  background-color: #34495e; }
+
+h1, h2, h3, h4 {
+  font-family: 'Mukta Malar', sans-serif; }
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -94,5 +100,32 @@ table {
     width: 6em;
     text-transform: uppercase; }
 
-.container h1 {
-  text-align: center; }
+.game-container {
+  width: 70%;
+  float: left; }
+  .game-container h1 {
+    text-align: center; }
+
+.info-section {
+  background-color: #34495e;
+  height: auto;
+  width: 30%;
+  color: snow;
+  float: right; }
+  .info-section h2 {
+    text-align: center;
+    padding: 1.5em;
+    font-size: 1.5em; }
+  .info-section h3 {
+    text-align: center;
+    padding: 1em;
+    font-size: 1.2em;
+    font-style: italic; }
+  .info-section p {
+    padding: 1em;
+    line-height: 1.5; }
+  .info-section ul {
+    list-style-type: disc; }
+    .info-section ul li {
+      padding: 1em;
+      list-style-type: disc; }
