--- a/src/styles/_Global.scss
+++ b/src/styles/_Global.scss
@@ -1,4 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Mukta+Malar:700|Roboto');
+
+//font-family: 'Roboto', sans-serif;
+//font-family: 'Mukta Malar', sans-serif;
+
+
 
 body {
   background-color: white; //#191919;//#24252a;
+  font-family: 'Roboto', sans-serif;
+  background-color: #34495e;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Mukta Malar', sans-serif;
 }
