--- a/src/styles/_Info.scss
+++ b/src/styles/_Info.scss
@@ -1,10 +1,25 @@
 
 .info-section {
-  background-color: #34495e;
+  background-color: #2e3131;//#34495e;
   height: auto;
-  width: 30%;
   color: snow;
-  float: right;
+  font-size: .9em;
+
+  .video-section {
+    text-align: center;
+    padding: 3em;
+  }
+
+  .section {
+    height: 40em;
+    background-color: #2e3131;
+    width: 33.3%;
+    float: left;
+  }
+
+  h2, h3 {
+    color:  #29f1c3;
+  }
 
   h2 {
     text-align: center;
